Remove vip related logic ans support more os